@@ -215,6 +215,57 @@
 
             </LinearLayout>
 
+            <com.google.android.material.card.MaterialCardView
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginStart="16dp"
+              android:layout_marginEnd="16dp"
+              android:layout_marginTop="8dp"
+              android:layout_marginBottom="8dp"
+              app:contentPadding="16dp"
+              app:cardElevation="0dp"
+              app:cardCornerRadius="12dp"
+              app:cardBackgroundColor="@color/on_background_variant"
+              android:visibility="@{formData.displayHelpLive &amp;&amp; formData.showMoveOnOpen ? View.VISIBLE : View.GONE}">
+
+              <TextView
+                style="@style/Widget.Grocy.TextView.Paragraph"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/msg_help_move_on_open" />
+
+            </com.google.android.material.card.MaterialCardView>
+
+            <LinearLayout
+              style="@style/Widget.Grocy.LinearLayout.ListItem.SingleLine.Icon.Clickable"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:onClick="@{() -> formData.toggleMoveOnOpenLive()}"
+              android:visibility="@{formData.showMoveOnOpen ? View.VISIBLE : View.GONE}"
+              android:alpha="@{formData.moveOnOpenDisabledLive ? 0.5f : 1.0f}"
+              app:enabled="@{!formData.moveOnOpenDisabledLive}">
+
+              <ImageView
+                style="@style/Widget.Grocy.ImageView.ListItem.Icon"
+                tools:ignore="ContentDescription"
+                android:src="@drawable/ic_round_open" />
+
+              <LinearLayout style="@style/Widget.Grocy.LinearLayout.ListItem.TextBox.Stretch">
+
+                <TextView
+                  style="@style/Widget.Grocy.TextView.ListItem.Title"
+                  android:maxLines="3"
+                  android:text="@string/property_move_on_open" />
+
+              </LinearLayout>
+
+              <com.google.android.material.switchmaterial.SwitchMaterial
+                style="@style/Widget.Grocy.Switch"
+                android:checked="@={formData.moveOnOpenLive}"
+                android:clickable="@{!formData.moveOnOpenDisabledLive}"/>
+
+            </LinearLayout>
+
             <LinearLayout
               style="@style/Widget.Grocy.LinearLayout.ListItem.TwoLine.Icon.Clickable"
               android:onClick="@{() -> fragment.showStoresBottomSheet()}">
