@@ -1,6 +1,7 @@
 3.0.0:
 - New: Material You redesign with dynamic colors for Android 12 and later
 - New: Replaced HTML editor for recipe and product descriptions (same like on grocy server)
+- New: Product option "Move on open" (#569)
 - Improved: (not F-Droid) ML Kit scanner now only recognizes barcodes in preview field
 - Fixed: F-Droid build should work again (#566)
 - Fixed: Crash when amount in recipe ingredient was NaN (thanks @Whhoesj for your fix) (#565)
